--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 	<title>To Do List</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 	<div id="container">
-		<h1>To-Do List</h1>
-		<input type="text" id="toDoList">
+		<h1>To-Do List <span id="toggleBtn"><i class="fas fa-plus"></i></span></h1>
+		<input type="text" id="toDoList" placeholder="Add New To Do">
 		<ul>
-			<li><span>X</span> Task 1</li>
-			<li><span>X</span> Task 2</li>
-			<li><span>X</span> Task 3</li>
+			<li><span><i class="fas fa-trash-alt"></i></span> Task 1</li>
+			<li><span><i class="fas fa-trash-alt"></i></span> Task 2</li>
+			<li><span><i class="fas fa-trash-alt"></i></span> Task 3</li>
 		</ul>
 
 	</div>
